<resources>
    <string name="app_name">Shopie</string>
    <string name="store_name">Shopie</string>
    <string name="navigation_drawer_open">Opens Drawer</string>
    <string name="navigation_drawer_close">Closes Drawer</string>
    <string name="bnv_home">Home</string>
    <string name="bnv_category">Category</string>
    <string name="bnv_account">Account</string>
    <string name="bnv_cart">Cart</string>
    <string name="nav_drawer_my_orders">My Orders</string>
    <string name="nav_drawer_my_wishlist">My Wishlist</string>
    <string name="nav_drawer_faqs">FAQs</string>
    <string name="nav_drawer_contact_us">Contact Us</string>
    <string name="nav_drawer_legal_terms">Legal Terms</string>
    <string name="nav_drawer_testing_zone">Testing Zone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rupee_symbol">"₹"</string>


    <string-array name="order_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="select_quantity_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="out_of_stock">Out of Stock</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_from_wishlist">Remove From Wishlist</string>
    <string name="add_in_wishlist">Add in Wishlist</string>
    <string name="in_stock">In Stock</string>
    <string name="order_soon">Order soon</string>


</resources>